--- a/aeonRequestsDialog.css
+++ b/aeonRequestsDialog.css
@@ -1,3 +1,4 @@
+.aeon_request {font-size: .8em; text-align: left}
 .aeon_request .label { font-weight: bold; }
 .aeon_request .requestItem { padding: 1em 0; }
 .aeon_request .requestDesc { margin-left: 2em; }
@@ -6,6 +7,5 @@
 .aeon_request .rev_sched_opt { float:left; clear:left; margin-right: 1em; height: 3em; }
 .aeon_request .buttons { clear:both; }
 .aeon_request .disabled { color: #aaa; }
-.aeon_request {font-size: .8em;}
 .advanced_copy_opt .label { display: inline-block; width: 10em;}
 .adv_copy_select { width: 20em;}
