--- a/aeonRequestsDialog.css
+++ b/aeonRequestsDialog.css
@@ -7,5 +7,6 @@
 .aeon_request .rev_sched_opt { float:left; clear:left; margin-right: 1em; height: 3em; }
 .aeon_request .buttons { clear:both; }
 .aeon_request .disabled { color: #aaa; }
-.advanced_copy_opt .label { display: inline-block; width: 10em;}
-.adv_copy_select { width: 20em;}
+.aeon_request .advanced_copy_opt .label { display: inline-block; width: 10em;}
+.aeon_request .adv_copy_select { width: 20em;}
+.aeon_request .message { font-weight: bold; margin-bottom: .2em; }
