--- a/aeonRequestsDialog.css
+++ b/aeonRequestsDialog.css
@@ -11,3 +11,4 @@
 .aeon_request .advanced_copy_opt .label { display: inline-block; width: 10em;}
 .aeon_request .adv_copy_select { width: 20em;}
 .aeon_request .message { font-weight: bold; margin-bottom: .2em; }
+.aeon_request .select_all_buttons { margin-bottom: .2em; }
