--- a/aeonRequestsDialog.css
+++ b/aeonRequestsDialog.css
@@ -1,14 +1,12 @@
 .ui-dialog .ui-dialog-titlebar{text-align:left}
 .aeon_request {font-size: .8em; text-align: left}
 .aeon_request .label { font-weight: bold; }
-.aeon_request .requestItem { padding: 1em 0; }
 .aeon_request .requestDesc { margin-left: 2em; }
-.aeon_request .request_for, .aeon_request .notes, .aeon_request .scheduled_date, .aeon_request .review, .aeon_request .buttons, .aeon_request .simple_copy_opt, .aeon_request .advanced_copy_opt{ padding-bottom: 1em; }
+.aeon_request_header, .aeon_request .select_all_buttons,.aeon_request .requestItem, .aeon_request .notes, .aeon_request .scheduled_date, .aeon_request .review, .aeon_request .buttons, .aeon_request .simple_copy_opt, .aeon_request .advanced_copy_opt{ margin-bottom: 1em; }
 .aeon_request .request_inputs { float:left; }
 .aeon_request .rev_sched_opt { float:left; clear:left; margin-right: 1em; height: 3em; }
 .aeon_request .buttons { clear:both; }
 .aeon_request .disabled { color: #aaa; }
-.aeon_request .advanced_copy_opt .label { display: inline-block; width: 10em;}
+.aeon_request .advanced_copy_opt .label { display: inline-block; width: 14em;}
 .aeon_request .adv_copy_select { width: 20em;}
 .aeon_request .message { font-weight: bold; margin-bottom: .2em; }
-.aeon_request .select_all_buttons { margin-bottom: .2em; }
